Bug 850263 - Use reasonable SkiaGL cache size and share between instances r=mattwoodrow

--HG--
extra : rebase_source : 11a2e5ce90a693abdac91d5ca1308aaed3a29403